--- a/.github/workflows/SalesforceRelease.yml
+++ b/.github/workflows/SalesforceRelease.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Create GitHub Release
         uses: actions/create-release@v1
         with:
+          token: '${{ secrets.GITHUB_TOKEN }}'
           tag_name: '${{ github.event.inputs.version }}'
           release_name: 'Salesforce Release ${{ github.event.inputs.version }}'
           draft: false
@@ -22,7 +23,7 @@ jobs:
       - name: Upload Package to Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: '${{ steps.create_release.outputs.upload_url }}'
+          upload_url: '${{ steps.create-release.outputs.upload_url }}'
           asset_path: salesforce-package.zip
           asset_name: salesforce-package.zip
           asset_content_type: application/zip
