--- a/.github/workflows/SalesforceRelease.yml
+++ b/.github/workflows/SalesforceRelease.yml
@@ -14,8 +14,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Create GitHub Release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          token: '${{ secrets.GITHUB_TOKEN }}'
           tag_name: '${{ github.event.inputs.version }}'
           release_name: 'Salesforce Release ${{ github.event.inputs.version }}'
           draft: false
