--- a/.github/workflows/SalesforceRelease.yml
+++ b/.github/workflows/SalesforceRelease.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
       - name: Create GitHub Release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
@@ -24,7 +25,7 @@ jobs:
       - name: Upload Package to Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: '${{ steps.create-release.outputs.upload_url }}'
+          upload_url: '${{ steps.create_release.outputs.upload_url }}'
           asset_path: salesforce-package.zip
           asset_name: salesforce-package.zip
           asset_content_type: application/zip
