--- a/.github/workflows/SalesforceRelease.yml
+++ b/.github/workflows/SalesforceRelease.yml
@@ -31,6 +31,8 @@ jobs:
           prerelease: false
       - name: Upload Package to Release
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
           upload_url: '${{ steps.create_release.outputs.upload_url }}'
           asset_path: salesforce-package.zip
