--- a/.github/workflows/InputReleasetypeWorkflow.yml
+++ b/.github/workflows/InputReleasetypeWorkflow.yml
@@ -40,8 +40,12 @@ jobs:
           echo "RELEASE_TAG=$VERSION" >> $GITHUB_ENV
       - name: Push Release Tag
         run: |
-          git tag $RELEASE_TAG
-          git push origin $RELEASE_TAG
+          if git rev-parse $RELEASE_TAG >/dev/null 2>&1; then
+           echo "Tag $RELEASE_TAG already exists. Skipping..."
+          else
+           git tag $RELEASE_TAG
+           git push origin $RELEASE_TAG
+          fi          
       - name: Identify Commits
         id: commits
         run: >
